# Basic_agent

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  LICENSE  LICENSE.txt  README.md  collect_files.py  config.json  constructors.txt  fix_me.txt  headers.txt  main.cpp  memory.json  plugin.cpp  webscarper_class.txt
agent_workspace/: memory.json
agent_workspace/rag/: README.md  marble_falls.txt
include/: command_processor.h  config.h  embedding_engine.h  env_loader.h  file_handler.h  index_manager.h  llm_interface.h  memory.h  prompt_factory.h  rag.h  retriever.h  similarity.h  tools.h  vector_store.h  webscraperTools.h
include/chunkers/: chunker.h  code_chunk.h
src/: command_processor.cpp  config.cpp  embedding_engine.cpp  env_loader.cpp  file_handler.cpp  index_manager.cpp  llm_interface.cpp  memory.cpp  prompt_factory.cpp  rag.cpp  similarity.cpp  tools.cpp  vector_store.cpp  webscraperTools.cpp
src/chunker/: chunker.cpp
